Reskin: Fix #2161 Description in FD and RD not visible

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -7395,6 +7395,8 @@ div.scrollable {
   position: relative; }
   div.scrollable:before, div.scrollable:after {
     background: #ffffff;
+    border: solid 1px #ccc;
+    border-radius: 4px 4px 0 0;
     cursor: pointer;
     font-weight: bold;
     line-height: 42px;
@@ -7937,6 +7939,9 @@ span.required {
     font-size: 14px;
     text-align: center;
     padding: 8px 5px; }
+
+.graybg {
+  background-color: #f0f0f0; }
 
 .width170px {
   min-width: 170px !important;
